# duckai-cli

./: Cargo.toml  README.md
.github/workflows/: release.yml
js/: runtime.js
src/: challenge.rs  chat.rs  cli.rs  main.rs  server.rs  session.rs  vqd.rs
src/js/: mod.rs
src/model/: mod.rs
src/util/: mod.rs
workflows/: release.yml
