[package]
name = "duckai-cli"
version = "0.1.0"
edition = "2021"

[features]
default = []
http-mock = ["dep:httpmock"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
dialoguer = "0.11"
once_cell = "1.19"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "cookies", "json", "brotli", "gzip", "deflate", "stream"] }
scraper = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "signal", "fs", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
httpmock = { version = "0.7", optional = true }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
url = "2.5"
boa_engine = "0.17"
axum = { version = "0.7", features = ["json", "macros"] }
uuid = { version = "1.10", features = ["v4"] }
tokio-stream = "0.1"

[dev-dependencies]
assert_matches = "1.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
